--- a/app/src/main/res/layout/layout_scan_band.xml
+++ b/app/src/main/res/layout/layout_scan_band.xml
@@ -9,9 +9,9 @@
         android:id="@+id/tv_search_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="Perangkat Tersedia"
+        android:text="@string/detected_devices"
         android:textSize="20sp"
         style="@style/TextRegular"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:textAllCaps="false"
-        android:text="Cari"
+        android:text="@string/search"
         android:textColor="@color/white"
         app:iconTint="@color/white"
         style="@style/TextRegular"
