--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Belum memiliki akun?" />
+            android:text="@string/have_no_account" />
 
         <TextView
             android:id="@+id/tv_register"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
-            android:text="Daftar"
+            android:text="@string/register"
             android:textColor="@color/primary_color"
             android:textSize="12sp"/>
     </LinearLayout>
