--- a/app/src/main/res/layout/layout_register_form.xml
+++ b/app/src/main/res/layout/layout_register_form.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_tidt_name"
-            android:hint="Nama"
+            android:hint="@string/name"
             android:gravity="center_vertical"
             android:drawableStart="@drawable/ic_account"
             android:drawablePadding="16dp"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_tidt_email"
-            android:hint="Email"
+            android:hint="@string/email"
             android:gravity="center_vertical"
             android:drawableStart="@drawable/ic_outline_email"
             android:drawablePadding="16dp"
@@ -49,7 +49,7 @@
         app:passwordToggleEnabled="true">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_tidt_password"
-            android:hint="Password"
+            android:hint="@string/password"
             android:drawableStart="@drawable/ic_outline_vpn_key"
             android:drawablePadding="16dp"
             android:textAppearance="@style/FormTextAppearance"
@@ -67,7 +67,7 @@
         app:passwordToggleEnabled="true">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_tidt_repassword"
-            android:hint="Ketik ulang password"
+            android:hint="@string/retype_password"
             android:drawableStart="@drawable/ic_outline_vpn_key"
             android:drawablePadding="16dp"
             android:textAppearance="@style/FormTextAppearance"
@@ -80,7 +80,7 @@
         android:id="@+id/register_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Daftar"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:layout_marginTop="16dp"
         android:textColor="@color/white"
