--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,6 +15,14 @@
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
+    <style name="Theme.HeartRateMonitoringApp.Splash" parent="Theme.HeartRateMonitoringApp">
+        <item name="android:statusBarColor">@color/white</item>
+    </style>
+
+    <style name="DatePicker" parent="ThemeOverlay.Material3.MaterialCalendar">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="TextRegular">
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:textColor">@color/primary_text_color</item>
@@ -59,4 +67,11 @@
         <item name="hintTextColor">@color/primary_text_color</item>
         <item name="errorTextAppearance">@style/ErrorTextAppearance</item>
     </style>
+
+    <style name="Switch" parent="Theme.AppCompat.Light">
+        <item name="android:padding">12dp</item>
+        <item name="colorControlActivated">@color/primary_color</item>
+        <item name="android:colorForeground">#FF757575</item>
+    </style>
+
 </resources>
