--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,10 @@
         <item name="android:statusBarColor">@color/white</item>
     </style>
 
+    <style name="DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="TextRegular">
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:textColor">@color/primary_text_color</item>
