--- a/app/src/main/res/layout/layout_average.xml
+++ b/app/src/main/res/layout/layout_average.xml
@@ -39,7 +39,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="@string/step"
+                    android:text="@string/step_title"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="24sp"
