--- a/app/src/main/res/layout/layout_edit_password.xml
+++ b/app/src/main/res/layout/layout_edit_password.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        app:passwordToggleEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,6 +23,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:hint="@string/old_password"
+            android:maxLength="20"
             android:inputType="textPassword"
             android:textAppearance="@style/FormTextAppearance" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -34,6 +36,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        app:passwordToggleEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_old_password">
@@ -44,6 +47,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:hint="@string/new_password"
+            android:maxLength="20"
             android:inputType="textPassword"
             android:textAppearance="@style/FormTextAppearance" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +60,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        app:passwordToggleEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_new_password">
@@ -66,19 +71,20 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:hint="@string/retype_password"
+            android:maxLength="20"
             android:inputType="textPassword"
             android:textAppearance="@style/FormTextAppearance" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/save_btn"
+        android:id="@+id/submit_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_button"
-        android:text="@string/save"
+        android:text="@string/change_password"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:backgroundTint="@null"
