--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_grey"
-    tools:context=".app.dashboard.profile.editpassword.EditPasswordActivity">
+    tools:context=".dashboard.profile.editpassword.EditPasswordActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
