--- a/app/src/main/res/layout/activity_live_monitoring.xml
+++ b/app/src/main/res/layout/activity_live_monitoring.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_grey"
-    tools:context=".app.monitoring.live.LiveMonitoringActivity">
+    tools:context=".monitoring.live.LiveMonitoringActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
