--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_grey"
-    tools:context=".app.auth.login.LoginActivity">
+    tools:context=".auth.login.LoginActivity">
 
     <include
         android:id="@+id/login_form"
