--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_grey"
-    tools:context=".app.scanner.ScannerActivity">
+    tools:context=".scanner.ScannerActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
