--- a/app/src/main/res/layout/layout_average.xml
+++ b/app/src/main/res/layout/layout_average.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="32dp"
@@ -18,8 +20,8 @@
             android:id="@+id/card_avg_step"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="64dp"
-            android:layout_marginVertical="16dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
             android:elevation="100dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,31 +40,43 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:text="@string/step_title"
+                    android:text="@string/step"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    android:drawablePadding="8dp"
                     app:drawableStartCompat="@drawable/ic_directions_walk"
                     app:drawableTint="@color/orange"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv_today_steps_value"
-                    style="@style/TextRegular"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:id="@+id/tv_today_steps"
+                    style="@style/TextMedium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:autoSizeTextType="uniform"
-                    android:gravity="center"
-                    android:padding="8dp"
+                    android:text="@string/today_step"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_today_steps_title" />
+
+                <TextView
+                    android:id="@+id/tv_today_steps_value"
+                    style="@style/TextRegular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:autoSizeTextType="uniform"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/tv_today_steps_title"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_today_steps" />
 
                 <TextView
                     android:id="@+id/tv_today_steps_unit"
@@ -70,15 +84,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:autoSizeTextType="uniform"
                     android:gravity="center"
                     android:text="@string/step"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_today_steps_value" />
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_today_steps_value"
+                    app:layout_constraintStart_toEndOf="@+id/tv_today_steps_value"
+                    app:layout_constraintTop_toTopOf="@+id/tv_today_steps_value" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -88,8 +100,8 @@
             android:id="@+id/card_heart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="64dp"
-            android:layout_marginVertical="16dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
             android:elevation="100dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,48 +119,43 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
                     android:text="@string/heart_rate"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    android:drawablePadding="8dp"
                     app:drawableStartCompat="@drawable/ic_heart_filled"
                     app:drawableTint="@color/red"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv_avg_heart_value"
-                    style="@style/TextRegular"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginStart="8dp"
+                    android:id="@+id/tv_avg_heart_text"
+                    style="@style/TextMedium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:autoSizeTextType="uniform"
-                    android:gravity="center"
-                    android:padding="8dp"
+                    android:text="@string/today_average_heart_rate"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_avg_heart_title" />
 
-                <TextView
-                    android:id="@+id/tv_avg_heart_unit"
-                    style="@style/TextSemiBold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/line_chart_heart_rate"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:autoSizeTextType="uniform"
-                    android:gravity="center"
-                    android:text="@string/bpm"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_avg_heart_value"
-                     />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_avg_heart_text" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
