--- a/app/src/main/res/layout/layout_form_questionnaire.xml
+++ b/app/src/main/res/layout/layout_form_questionnaire.xml
@@ -120,6 +120,7 @@
         android:text="@string/send"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:enabled="false"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
