--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#BA0000</color>
+    <color name="dark_red">#AB2328</color>
     <color name="light_grey">#DEDEDE</color>
     <color name="white_grey">#F2F3F5</color>
     <color name="dark_grey">#AAAAAA</color>
