--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -5,31 +5,35 @@
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dashboard.home.HomeFragment">
+    android:background="@color/white_grey"
+    tools:context=".dashboard.profile.contact.data.ShowDataActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            style="@style/TextRegular"
+            app:title="@string/show_data_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <include
             android:id="@+id/layout_average"
             layout="@layout/layout_average"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_height="0dp"
             android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <include
             android:id="@+id/layout_loading"
             layout="@layout/layout_loading"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
-
-        <include
-            android:id="@+id/layout_emergency_button"
-            layout="@layout/layout_emergency_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone" />
